--- a/Frontend/catalog_panel/src/pages/LoginPage/LoginPage.css
+++ b/Frontend/catalog_panel/src/pages/LoginPage/LoginPage.css
@@ -18,34 +18,34 @@
     text-align: center;
 }
 
-.login-form {
+.login-container.login-form {
     display: flex;
     flex-direction: column;
     gap: 24px;
 }
 
-.form-group {
+.login-container.form-group {
     display: flex;
     flex-direction: column;
     text-align: left;
 }
 
-label {
+.login-container.label {
     font-size: 22px;
     font-weight: 500;
     color: #555;
     margin-bottom: 8px;
 }
 
-.input-wrapper,
-.password-input-wrapper {
+.login-container.input-wrapper,
+.login-container.password-input-wrapper {
     position: relative;
     display: flex;
     align-items: center;
     width: 100%;
 }
 
-input {
+.login-container.input {
     padding: 12px 14px; /* Увеличил внутренние отступы для большей высоты */
     border: 1px solid #e0e0e0;
     border-radius: 8px;
@@ -59,12 +59,12 @@ input {
     align-items: center; /* Центрируем текст по вертикали */
 }
 
-input:focus {
+.login-container.input:focus {
     border-color: #27ae60;
     outline: none;
 }
 
-.toggle-password-eye {
+.login-container.toggle-password-eye {
     position: absolute;
     right: 12px;
     top: 50%;
@@ -78,25 +78,25 @@ input:focus {
     justify-content: center;
 }
 
-.toggle-password-eye svg {
+.login-container.toggle-password-eye svg {
     transition: all 0.3s ease;
 }
 
-.eye-open .eye-path {
+.login-container.eye-open .login-container.eye-path {
     stroke: #27ae60;
 }
 
-.eye-closed .eye-path {
+.login-container.eye-closed .eye-path {
     stroke: #27ae60;
 }
 
-.eye-open .pupil {
+.login-container.eye-open .pupil {
     opacity: 1;
     transform: scale(1);
     transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
-.eye-closed .pupil {
+.login-container.eye-closed .login-container.pupil {
     opacity: 0;
     transform: scale(0.5);
     transition: opacity 0.3s ease, transform 0.3s ease;
@@ -118,7 +118,7 @@ input:focus {
     stroke: #219653;
 }
 
-.error-message {
+.login-container.error-message {
     font-size: 20px;
     color: #e74c3c;
     text-align: center;
@@ -146,7 +146,7 @@ input:focus {
     background-color: #219653;
 }
 
-.google-login-button {
+.login-container.google-login-button {
     display: flex;
     align-items: center;
     justify-content: center;
